<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Destinations -->
    <string name="missing_pet_profile_screen_name">Missing Pet Profile Screen</string>

    <!-- Toolbar Titles -->
    <string name="edit_picture_menu_title">Edit Picture</string>
    <string name="open_gallery_menu_title">Open Gallery</string>
    <string name="remove_pet_menu_title">Remove Pet</string>

    <!-- Views -->
    <string name="info">Info</string>
    <string name="animal_field">%s | %s</string>
    <string name="input_dialog_pet_name_hint">Pet name</string>
    <string name="apply_button">Apply</string>
    <string name="select_animal_title">Select Animal</string>
    <string name="select_breed_title">Select Breed</string>
    <string name="reporter_title">Reporter</string>
    <string name="confirm_removal_message">Do really want to remove %s\'s found report?</string>
    <string name="confirm_returned_message">Do you confirm that %s was returned?</string>
    <string name="confirm_found_message">Do you confirm that you found %s?</string>
    <string name="remove_confirmed_message">%s\'s report removed</string>
    <string name="returned_confirmed_message">Good job! %s was marked as returned!</string>
    <string name="found_confirmed_message">That\'s Great! %s was marked as found!</string>
    <string name="mark_as_returned_button_text">Mark as Returned</string>
    <string name="mark_as_found_button_text">Mark as Found</string>

    <!-- Content Descriptions -->
    <string name="pet_picture_content_description">Pet profile picture</string>
    <string name="pet_favorite_icon_content_description">Pet favorite icon</string>
    <string name="profile_name_edit_icon_content_description">Pet name edit icon</string>
    <string name="pet_animal_icon_content_description">Pet animal icon</string>
    <string name="pet_animal_edit_icon_content_description">Pet animal edit icon</string>
    <string name="pet_breed_icon_content_description">Pet breed icon</string>
    <string name="pet_breed_edit_icon_content_description">Pet breed edit icon</string>
</resources>